# algorithms

./: .gitignore  CMakeLists.txt  allTest_release.cmd  azure-pipelines.yml  build_gen.py  main.cc  my_template.h  number_theory.h  tools.h
bits/: stdc++.h
lib/: lib.h  new_template_gen.py  performance.h
lib/all_test/: CMakeLists.txt  all_test.cc  all_test.h
lib/berlekamp_massey/: berlekamp_massey_all.h
lib/berlekamp_massey/src/: berlekamp_massey.h
lib/berlekamp_massey/test/: CMakeLists.txt  berlekamp_massey_test.cc  berlekamp_massey_test.h
lib/bridge/: bridge_all.h
lib/bridge/test/: CMakeLists.txt  bridge_test.cc  bridge_test.h
lib/fenwick_tree/: fenwick_tree_all.h
lib/fenwick_tree/src/: fenwick_tree.h
lib/fenwick_tree/test/: CMakeLists.txt  fenwick_tree_test.cc  fenwick_tree_test.h
lib/fft/: fft_all.h
lib/fft/src/: fft.h  ntt.h
lib/fft/test/: CMakeLists.txt  fft_test.cc  fft_test.h
lib/flow/: flow_all.h
lib/flow/src/: flow.h
lib/flow/test/: CMakeLists.txt  flow_test.cc  flow_test.h
lib/matching/: matching.h
lib/matching/src/: kuhn.h  kuhn_vertex_cover.h
lib/matching/test/: CMakeLists.txt  matching_test.cc  matching_test.h
lib/number_theory/: number_theory.h
lib/number_theory/src/: basic_number_theory.h
lib/number_theory/test/: CMakeLists.txt  number_theory_test.cc  number_theory_test.h
lib/scc/: scc_all.h
lib/scc/src/: 2sat.h  scc.h
lib/scc/test/: CMakeLists.txt  scc_test.cc  scc_test.h
lib/searching/: searching_all.h
lib/searching/src/: binary_search.h  exponential_search.h  golden_section_search.h  ternary_search.h
lib/searching/test/: CMakeLists.txt  searching_test.cc  searching_test.h
lib/segment_tree/: segment_tree_all.h
lib/segment_tree/src/: segment_tree.h  segment_tree_bottom_up.h  segment_tree_itmo.h
lib/segment_tree/test/: CMakeLists.txt  segment_tree_test.cc  segment_tree_test.h
lib/suffix_array/: suffix_array_all.h
lib/suffix_array/src/: suffix_array.h
lib/suffix_array/test/: CMakeLists.txt  suffix_array_test.cc  suffix_array_test.h
lib/template/: template_all.h
lib/template/src/: template.h
lib/template/test/: CMakeLists.txt  template_test.cc  template_test.h
lib/treap/: treap_all.h
lib/treap/src/: treap.h
lib/treap/test/: CMakeLists.txt  treap_test.cc  treap_test.h
matching/: kuhn.cpp  kuhn_vertex_cover.cpp
myproject/rangeProjWithKDTree/: closePoints.cpp
rili/: Test.h
rili/test/: AlmostEqual.h  Assert.cpp  Assert.h  BaseFixture.cpp  BaseFixture.h  BasicFormater.cpp  BasicFormater.h  CallHandler.cpp  CallHandler.h  CallbackHolder.h  Config.h  ConsoleColor.h  ConvertToString.h  EventHandler.cpp  EventHandler.h  Expect.cpp  Expect.h  Formater.cpp  Formater.h  InternalException.h  Main.cpp  Main.h  MakeUnique.h  MockDefinitions.h  Mocks.cpp  Runner.cpp  Runner.h  Test.h  TestStorage.cpp  TestStorage.h
