cmake_minimum_required (VERSION 3.6)
project (IscsiLibrary)
file(GLOB_RECURSE RILI_TEST "rili/*.cpp" "rili/*.h")
source_group("rili_test" FILES ${RILI_TEST})
add_library(rili ${RILI_TEST})
include_directories(".")
add_executable(IscsiLibrary main.cc tools.h my_template.h lib/lib.h)
target_link_libraries(IscsiLibrary rili)
add_definitions(-DHOME -D_CRT_SECURE_NO_WARNINGS -DNOMINMAX) 
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT IscsiLibrary) 
add_subdirectory(lib/number_theory/test/)
add_subdirectory(lib/matching/test/)
add_subdirectory(lib/segment_tree/test/)

