cmake_minimum_required (VERSION 3.6)
set(CMAKE_CXX_STANDARD 11)
project (IscsiLibrary)
file(GLOB_RECURSE RILI_TEST "rili/*.cpp" "rili/*.h")
source_group("rili_test" FILES ${RILI_TEST})
add_library(Rili ${RILI_TEST})
include_directories(".")
add_executable(IscsiLibrary main.cc tools.h my_template.h lib/lib.h lib/performance.h)
target_link_libraries(IscsiLibrary Rili)
add_definitions(-DHOME -D_CRT_SECURE_NO_WARNINGS -DNOMINMAX) 
add_subdirectory(lib/berlekamp_massey/test/)
add_subdirectory(lib/fenwick_tree/test/)
add_subdirectory(lib/flow/test/)
add_subdirectory(lib/fft/test/)
add_subdirectory(lib/matching/test/)
add_subdirectory(lib/number_theory/test/)
add_subdirectory(lib/scc/test/)
add_subdirectory(lib/searching/test/)
add_subdirectory(lib/segment_tree/test/)
add_subdirectory(lib/treap/test/)
add_subdirectory(lib/suffix_array/test/)
add_subdirectory(lib/bridge/test/)
add_subdirectory(lib/all_test/)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT AllTest) 
