file(GLOB_RECURSE SEGMENT_TREE_SRC "../src/*.h")
source_group("src" FILES ${SEGMENT_TREE_SRC})
add_executable(SegmentTreeTest segment_tree_test.cc segment_tree_test.h ../segment_tree_all.h ${SEGMENT_TREE_SRC})
add_definitions(-DHOME -D_CRT_SECURE_NO_WARNINGS)
target_link_libraries(SegmentTreeTest Rili)
